kustomize/dmz/malumnweb-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: malumnweb-app
  name: malumnweb-http-svc
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: malumnweb-app
