kustomize/dmz/malumnweb-app/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: malumnweb-networkpolicy
spec:
  podSelector:
  policyTypes:
  - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: ingress
      ports:
        - protocol: TCP
          port: 80
